# millennium

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  publish-aur.yml  test-pkgbuild.yml
assets/locales/locales/: spanish.json
assets/src/locales/locales/: spanish.json
scripts/: install.sh  version
scripts/cmake/: bootstrap_deps.cmake  find_steam_path.cmake  generate_virtfs.cmake  millennium_version.cmake  typescript_targets.cmake
scripts/linux/: destroy_devenv.sh  setup_devenv.sh
src/: CMakeLists.txt  millennium.cc
src/bindings/: entry_point.cc  library_updater.cc  plugin_config.cc  plugin_mgr.cc  scan.cc  sys_accent_col.cc  theme_cfg.cc  theme_mgr.cc  webkit.cc
src/bootstrap/linux/: CMakeLists.txt  millennium_pvs64.cc
src/bootstrap/macos/: steam_launcher.cc
src/bootstrap/win32/: CMakeLists.txt
src/engine/: backend_init.cc  backend_mgr.cc  cdp_api.cc  cdp_connector.cc  child_process.cc  cmdline_api.cc  cmdline_parse.cc  core_ipc.cc  ffi_binder.cc  http_hooks.cc  lifecycle.cc  millennium_updater.cc  plugin_loader.cc  plugin_manager.cc  plugin_webkit_world_mgr.cc
src/frontend/settings/: index.tsx
src/frontend/utils/: localization-manager.ts
src/include/head/: entry_point.h  library_updater.h  theme_cfg.h  theme_mgr.h
src/include/instrumentation/: chromium.h
src/include/millennium/: backend_mgr.h  cdp_api.h  cdp_connector.h  config.h  ffi_binder.h  filesystem.h  http.h  http_hooks.h  logger.h  millennium_lifecycle.h  plugin_ipc.h  plugin_loader.h  plugin_webkit_world_mgr.h  steam_hooks.h
src/instrumentation/internal/: steam_hooks.cc
src/instrumentation/loopback/: CMakeLists.txt  main.cc  resource_handler.cc  resource_reader.cc
src/locales/: english.json  italian.json  spanish.json
src/lua_host/: CMakeLists.txt  lua_interop.cc  lua_millennium_rpc.cc  main.cc
src/mep/: console_capture.cc  mep_hooks.cc  mep_server.cc
src/platform/: linux.cc  linux_legacy.cc  posix.cc  windows.cc
src/sdk/: pnpm-lock.yaml
src/shared/: crash_handler.cc
src/sys/: logger.cc
src/system/: config.cc  environment.cc  filesystem.cc  health_check.cc  logger.cc
src/typescript/: build.ts  package.json
src/typescript/frontend/: index.tsx  package.json
src/typescript/frontend/components/: AccentColorPicker.tsx  Icons.tsx  PluginCrashModal.tsx  PluginInstaller.tsx  SupersededPluginModal.tsx  ThemeEditor.tsx  ThemeInstaller.tsx
src/typescript/frontend/patcher/: index.ts
src/typescript/frontend/quick-access/: DesktopMenuContext.tsx  PluginView.tsx  browserHook.ts
src/typescript/frontend/settings/: index.tsx
src/typescript/frontend/settings/general/: Installer.tsx
src/typescript/frontend/settings/logs/: index.tsx
src/typescript/frontend/settings/plugins/: PluginComponent.tsx  PluginInstallerModal.tsx  index.tsx
src/typescript/frontend/settings/quickcss/: index.tsx
src/typescript/frontend/settings/themes/: ThemeComponent.tsx  ThemeInstallerModal.tsx  index.tsx
src/typescript/frontend/settings/updates/: MillenniumUpdateCard.tsx  PluginUpdateCards.tsx  ThemeUpdateCards.tsx  index.tsx  useUpdateContext.tsx
src/typescript/frontend/types/: index.ts
src/typescript/frontend/utils/: config-provider.tsx  ffi.ts  index.tsx  localization-manager.ts  settings-manager.ts  styles.tsx  update-notification-service.tsx  updateMillennium.tsx  url-scheme-handler.ts
src/typescript/ttc/src/: ast-transforms.ts  static-embed.ts  transpiler.ts
